--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,7 @@ body {
 
 .home-1 {
     background-position: 0 0;
-    background-image: url("images/Home1.png");
+    background-image: url("./images/Home1.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
@@ -155,13 +155,13 @@ nav p {
     flex-direction: column;
 }
 .iaf {
-    background: url(images/IAFBG.png);
+    background: url(./images/IAFBG.png);
 }
 .army {
-    background: url(images/Army\ bg.png);
+    background: url(./images/Army\ bg.png);
 }
 .navy {
-    background: url(images/Navy\ bg.png);
+    background: url(./images/Navy\ bg.png);
 }
 
 .force-top img {
@@ -290,7 +290,7 @@ nav p {
 
 /* Indian Army */
 #indian-army {
-    background: url(images/Army\ main\ bg.png);
+    background: url(./images/Army\ main\ bg.png);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 100% 100%;
